# quinkgl-framework

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml  docker-test.bat  docker-test.sh
docker/scale/: docker-compose-10-nodes.yml  docker-compose-5-nodes.yml  docker-compose.20.yml  docker-compose.yml  generate_compose.py
docs/: conf.py  faq.md  getting-started-tr.md  getting-started.md  index.md  quickstart.md
docs/cli/: discover.md  index.md  info.md  init.md  keygen.md  manifest.md  publish.md  query.md  run.md  status.md  telemetry.md
docs/concepts/: fingerprint.md  gossip.md  index.md  swarm.md
docs/cookbook/: custom-model-wrapper.md  index.md  multi-peer-testing.md  running-local-swarm.md  telemetry-setup.md
docs/migration/: index.md
docs/reference/: cli-reference.md  error-codes.md  index.md  manifest-schema.md
docs/reference/api/: index.md
docs/security/: incident-response.md  index.md  key-rotation.md  rate-limits.md  signing.md  threat-model.md  tofu-cache.md  trust-policies.md
docs/tutorials/: index.md
docs/tutorials/T1/: index.md
docs/tutorials/T2/: index.md
docs/tutorials/T3/: index.md
docs/tutorials/T4/: index.md
docs/tutorials/T5/: index.md
docs/tutorials/T6/: index.md
docs/user-guide/: index.md  manifest.md  peer-script.md  telemetry.md  troubleshooting.md  trust.md
protos/: gossip.proto  tunnel.proto
simulation-tests/: README.md  requirements.txt  script-1.py  script-2.py  script.py
src/quinkgl/: __init__.py  config.py
src/quinkgl/aggregation/: __init__.py  base.py  entropy_weighted.py  fedavg.py  fedavgm.py  fedprox.py  krum.py  scaffold.py  staleness_fedavg.py  strategies.py  trimmed_mean.py
src/quinkgl/cli/: __init__.py  __main__.py  directory_cmd.py  exit_codes.py  info_cmd.py  init_cmd.py  keygen_cmd.py  manifest_cmd.py  run_cmd.py  status_cmd.py  status_server.py  telemetry_cmd.py
src/quinkgl/core/: __init__.py  learning_node.py
src/quinkgl/fingerprint/: __init__.py  computer.py  fingerprint.py
src/quinkgl/gossip/: __init__.py  aggregator.py  consensus.py  protocol.py  trust.py
src/quinkgl/manifest/: __init__.py  arch_hash.py  errors.py  loader.py  magnet.py  schema.py  signing.py  strategy_factory.py
src/quinkgl/models/: __init__.py  base.py  pytorch.py  tensorflow.py
src/quinkgl/network/: __init__.py  auto_discovery.py  directory.py  gossip_community.py  gossip_node.py  ipv8_manager.py  manifest_exchange.py  model_serializer.py  tofu.py
src/quinkgl/observability/: __init__.py  events.py  terminal.py
src/quinkgl/serialization/: __init__.py  (+6 more)
tests/: conftest.py  test_package_metadata.py
tests/aggregation/: test_consensus.py  test_dataflow.py  test_entropy_weighted.py  test_fedavg.py  test_fedavgm.py  test_fedprox.py  test_krum.py  test_multikrum.py  test_new_strategies.py  test_persistence_invariants.py  test_public_imports.py  test_robustness.py  test_scaffold.py  test_trimmed_mean.py
tests/api/: test_gossipnode_manifest.py  test_public_surface.py
tests/cli/: test_cli_skeleton.py  test_directory_cli.py  test_init_cli.py  test_manifest_cli.py  test_run_cli.py  test_run_resume_and_optimizer.py  test_run_telemetry_defaults.py  test_signing_cli.py  test_status_cli.py  test_status_socket.py  test_telemetry_cli.py  test_testing_fixtures.py
tests/compression/: test_new_modules.py
tests/core/: test_learning_node.py
tests/docs/: __init__.py  conftest.py  test_cli_page_parity.py  test_docstring_coverage.py  test_error_code_coverage.py  test_link_integrity.py  test_spec_version_sync.py  test_tutorial_execution.py
tests/fingerprint/: test_dp_calibration.py  test_dp_composition.py  test_fingerprint.py  test_label_privacy.py  test_round_nonce.py
tests/framework/: data_generator.py  simple_model.py  test_adaptive_fanout.py  test_adversarial_scenarios.py  test_background_tasks.py  test_cancellation_safety.py  test_consensus_hardening.py  test_drain_receive_path.py  test_framework_simulation.py  test_hook_isolation.py  test_pending_lock.py  test_post_aggregation_eval.py  test_send_model_resilience.py
tests/gossip/: test_trust_symbols.py
tests/integration/: test_phase1_end_to_end.py
tests/manifest/: test_arch_hash.py  test_canonical_stability.py  test_data_policy.py  test_error_codes.py  test_loader.py  test_magnet.py  test_manifest_hash.py  test_qgl_file.py  test_schema_v3.py  test_schema_validation.py  test_signing.py  test_strategy_factory.py  test_swarm_manifest.py  test_topology_factory_new_strategies.py
tests/models/: test_personalized.py
tests/network/: test_adversarial.py  test_auto_discovery.py  test_cancellable_shutdown.py  test_checkpoint_broadcast.py  test_chunk_ack.py  test_chunk_buffer_caps.py  test_chunk_buffer_hijack.py  test_chunk_send_interval.py  test_chunk_signing.py  test_chunked_transfer_integration.py  test_directory_advertisement.py  test_directory_community.py  test_discovery_manifest_id.py  test_dynamic_dispatch.py  test_early_nack.py  test_fingerprint_runtime.py  test_gossip_node_tofu.py  test_ipv8_cleanup.py  test_join_state_machine.py  test_manifest_exchange.py  test_model_serializer.py  test_nack_hardening.py  test_replay_protection.py  test_serialization_pipeline_trace.py  test_startup_timeout.py  test_tofu_cache.py  test_transport_hardening.py  test_tunnel_receive_path.py  test_tunnel_reconnect.py  test_tunnel_server_hardening.py  test_tunnel_stream_death.py
tests/observability/: test_terminal_events.py  test_terminal_renderer.py
tests/serialization/: test_compression_pipeline.py  test_error_feedback.py  test_weights.py
tests/storage/: test_model_store.py  test_model_store_concurrent.py
tests/telemetry/: test_api.py  test_client_bridge.py  test_event_schema_stability.py  test_qglkey.py  test_store.py  test_stream.py
tests/topology/: test_affinity.py  test_cyclon.py  test_graph_topologies.py  test_random.py  test_sampler.py  test_spectral.py
tests/training/: test_apfl.py  test_convergence.py  test_prototypes.py
(+61 files in other folders)
