[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quinkgl"
version = "0.3.1"
description = "A decentralized gossip learning framework for P2P edge intelligence"
readme = "README.md"
authors = [
  { name = "Ali Seyhan", email = "aliseyhan@posta.mu.edu.tr" },
  { name = "Baki Turhan", email = "bakiturhan@posta.mu.edu.tr" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["gossip-learning", "federated-learning", "p2p", "decentralized-ai", "ipv8"]
requires-python = ">=3.9"
dependencies = [
    # Core numerical computing
    "numpy>=2.4.1",
    # Deep learning
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    # Data handling
    "scikit-learn>=1.8.0",
    "pandas>=3.0.0",
    # P2P networking
    "pyipv8>=3.1.0",
    # gRPC for communication
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.4",
    # Safe serialization
    "msgpack>=1.1.2",
    # Telemetry service
    "fastapi>=0.115.6",
    "pydantic>=2.0.0",
    "httpx>=0.27.2",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]

tensorflow = [
    "tensorflow>=2.12.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]
all = [
    "quinkgl[tensorflow]",
]

[project.urls]
"Homepage" = "https://github.com/aliseyhann/QuinkGL-Gossip-Learning-Framework"
"Bug Tracker" = "https://github.com/aliseyhann/QuinkGL-Gossip-Learning-Framework/issues"
"Documentation" = "https://github.com/aliseyhann/QuinkGL-Gossip-Learning-Framework#readme"

[project.scripts]
quinkgl-mcp = "quinkgl.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quinkgl*"]
exclude = ["tests*", "scripts*", "docker*"]

[tool.pyrefly]
exclude = [
    "archives",
    "docker",
    "docs",
    "scripts",
    "examples",

    ".git",
    "__pycache__",
    "build",
    "dist"
]
