[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quinkgl"
version = "0.3.5"
description = "A decentralized gossip learning framework for P2P edge intelligence"
readme = "README.md"
authors = [
  { name = "Ali Seyhan", email = "aliseyhan@posta.mu.edu.tr" },
  { name = "Baki Turhan", email = "bakiturhan@posta.mu.edu.tr" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["gossip-learning", "federated-learning", "p2p", "decentralized-ai", "ipv8"]
requires-python = ">=3.10"
dependencies = [
    # Core numerical computing
    "numpy>=1.26,<3",
    # Deep learning
    "torch>=2.1,<3",
    "torchvision>=0.16,<1",
    # Data handling
    "scikit-learn>=1.4,<2",
    "pandas>=2.0,<3",
    # P2P networking
    "pyipv8>=3.1,<4",
    # gRPC for communication
    "grpcio>=1.62,<2",
    "protobuf>=6.31,<7",
    # Safe serialization
    "msgpack>=1.1.2,<2",
    # Telemetry service
    "fastapi>=0.110,<1",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "uvicorn>=0.29,<1",
]

[project.scripts]
quinkgl = "quinkgl.cli.__main__:main"

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.12.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "black>=24,<27",
    "flake8>=7,<8",
    "mypy>=1.8,<2",
    "grpcio-tools>=1.62,<2",
]
docs = [
    "sphinx >=7.0",
    "myst-parser >=2.0",
    "sphinx-autodoc2 >=0.5",
    "lychee-bin >=0.14; sys_platform != 'win32'",
]
all = [
    "quinkgl[tensorflow]",
]

[project.urls]
"Homepage" = "https://github.com/QuinkGL"
"Bug Tracker" = "https://github.com/QuinkGL/quinkgl-framework/issues"
"Documentation" = "https://github.com/QuinkGL/quinkgl-framework/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"quinkgl.cli.templates" = ["**/*.tmpl"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quinkgl*"]
exclude = ["tests*", "scripts*", "docker*"]

[tool.pyrefly]
exclude = [
    "archives",
    "docker",
    "docs",
    "scripts",
    "examples",

    ".git",
    "__pycache__",
    "build",
    "dist"
]
